--- a/src/pages/bot-detail/bot-detail.scss
+++ b/src/pages/bot-detail/bot-detail.scss
@@ -1,20 +1,8 @@
 .coverrow {
-    background-image: url('/assets/images/usericon.jpg');
+    margin: -8px;
+    background-image: url('../assets/images/bluricon.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    position: relative;
-    z-index: 0;
-}
-.coverrow::before {
-  content: '';
-  position: absolute;
-  top: -10px;
-  bottom: 0px;
-  left: -10px;
-  right: -10px;
-  background: inherit;
-  filter: blur(5px);
-  z-index: -1;
 }
 
 table {
